# tg-codex

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
codex_telegram_bot/: __init__.py  approvals.py  codex_appserver.py  config.py  logging_setup.py  main.py  rate_limit.py  state.py  telegram_bot.py
codex_telegram_bot/tests/: test_approvals.py  test_router.py  test_state.py
