[project]
name = "codex-telegram-bot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "python-telegram-bot>=21.0,<22.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.14.10,<0.15.0",
  "ty>=0.0.7,<0.1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
